[gd_scene load_steps=11 format=3 uid="uid://c7uxhikit5022"]

[ext_resource type="Texture2D" uid="uid://xscfsj3qb2sb" path="res://assets/images/pill2.png" id="1_uy22o"]
[ext_resource type="Script" uid="uid://dv1miwktp1wka" path="res://scenes/pick_up/pick_up.gd" id="1_vptv5"]
[ext_resource type="AudioStream" uid="uid://d31mqcnwuymm6" path="res://assets/sounds/Positive Sounds/sfx_sounds_powerup1.wav" id="2_n5tbx"]
[ext_resource type="AudioStream" uid="uid://27umjm0w2wa2" path="res://assets/sounds/Positive Sounds/sfx_sounds_powerup2.wav" id="3_vptv5"]
[ext_resource type="AudioStream" uid="uid://bd4s8rd0exp4o" path="res://assets/sounds/Positive Sounds/sfx_sounds_powerup3.wav" id="4_fekg1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uw307"]
height = 49.4975

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_d0us1"]
streams_count = 3
stream_0/stream = ExtResource("2_n5tbx")
stream_1/stream = ExtResource("3_vptv5")
stream_2/stream = ExtResource("4_fekg1")

[sub_resource type="Animation" id="Animation_utuoc"]
resource_name = "flash"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.490196, 0.733333, 0.0117647, 1), Color(0.490196, 0.733333, 0.0117647, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_nspul"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_456we"]
_data = {
&"RESET": SubResource("Animation_nspul"),
&"flash": SubResource("Animation_utuoc")
}

[node name="PickUp" type="Area2D"]
script = ExtResource("1_vptv5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_uy22o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 0.785398
shape = SubResource("CapsuleShape2D_uw307")

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_d0us1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_456we")
}
autoplay = "flash"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="Sound" to="." method="_on_sound_finished"]
